# argh

./: CMakeLists.txt  README.md  go.mod  main.go
.github/workflows/: build-and-run.yml
c/: callgofunction.c  callgofunction.h
cmake/: FindCheck.cmake
gofunction/: gofunction.go
tests/: CMakeLists.txt  c_api_tests.c
